force-app/main/default/objects/clofor_com_cfs__GoodsPOMaterial__c/fields/clofor_com_cfs__MaterialID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaterialID__c</fullName>
    <label>MATERIAL ID</label>
    <referenceTo>clofor_com_cfs__Material__c</referenceTo>
    <relationshipLabel>GOODS P/O+MATERIAL</relationshipLabel>
    <relationshipName>GoodsPOMT</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>