force-app/main/default/objects/clofor_com_cfs__GoodsPOMaterial__c/fields/clofor_com_cfs__ShippingTypeAtWarehouse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingTypeAtWarehouse__c</fullName>
    <label>SHIPPING TYPE TO WAREHOUSE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__UnitType</valueSetName>
    </valueSet>
</CustomField>